--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 authors = ["phil <phil.j.ellison@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 image = "0.21"
+imageproc = "0.18"
 log = "0.4.6"
 rand = "0.7"
 simplelog = "0.6"
