--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 image = "0.21"
-imageproc = "0.18"
+imageproc = { git = "https://github.com/image-rs/imageproc" }
 log = "0.4.6"
 rand = "0.7"
 simplelog = "0.6"
